[Backend] Revise state predecessor selection
Depth tracking (as originally envisioned) is useless given the
possibility of cycles in the state graph; instead, the algorithm
juggles around the order of the potential predecessors to ensure
the "best" one comes first, and applies force where necessary.